--- a/package.json
+++ b/package.json
@@ -24,10 +24,16 @@
     "@nestjs/common": "^10.2.4",
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.2.4",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "@types/cache-manager": "^4.0.3",
+    "bcrypt": "^5.1.1",
     "cache-manager": "^5.2.3",
     "cache-manager-redis-store": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
